--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,10 @@ __pycache__/*
 .cache/*
 .*.swp
 */.ipynb_checkpoints/*
+.ipynb_checkpoints
 .DS_Store
+.bash_history
+.local/
 
 # Project files
 .ropeproject
@@ -21,6 +24,9 @@ __pycache__/*
 .settings
 .idea
 .vscode
+.ipython/
+.jupyter/
+.python_history
 tags
 
 # Package files
@@ -52,3 +58,7 @@ MANIFEST
 .venv*/
 .conda*/
 .python-version
+.env
+
+# Data sets
+data/
